--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <htmlcleaner.version>2.22</htmlcleaner.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
+        <commons-lang3.version>3.10</commons-lang3.version>
         <junit.version>5.5.1</junit.version>
         <assertj-core.version>3.13.2</assertj-core.version>
         <mockito.version>3.0.0</mockito.version>
@@ -32,6 +33,11 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>${commons-beanutils.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
 
         <dependency>
